# PenguinTools.UI

./: .gitignore  .gitmodules  AGENTS.md  README.md  components.json  doctor.config.json  index.html  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml  version-bump.yml
docs/: release.md
scripts/: build-cli.ts  bump-version.ts  link-locales.ts  setup-submodules.ts  stage-runtime.ts
src/: App.tsx  i18n.ts  i18next.d.ts  index.css  main.tsx  routes.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  lib.rs  main.rs  runtime.rs  watch.rs
src/components/: difficulty-badge.tsx
src/contexts/: AppContext.tsx  AppUpdateContext.tsx  AssetCatalogContext.tsx
src/hooks/: use-file-changed-reload.ts  use-native-file-drop.ts  use-page-title.ts  use-tracked-path-watch.ts
src/lib/: app-fs.ts  app-updater.ts  asset-catalog.test.ts  asset-catalog.ts  chart-difficulty.test.ts  chart-difficulty.ts  chart-file-discovery.test.ts  chart-file-discovery.ts  cli-commands.test.ts  cli-commands.ts  cli-results.test.ts  cli-results.ts  cli-types.ts  convert-files.test.ts  convert-files.ts  convert-ui.test.ts  convert-ui.ts  diagnostics.ts  difficulty-colors.ts  export-settings.test.ts  export-settings.ts  file-picker.ts  language-i18n.test.ts  messages.ts  nav-extract-icon.tsx  nav-items.ts  option-book.test.ts  option-book.ts  paths.ts  song-id-cascade.test.ts  song-id-cascade.ts  tauri-cli.ts  ui-i18n.test.ts  ui-settings.ts
(+64 files in other folders)
